--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <h1>Today is AbuBakar's birthday 🎉</h1>
-            <img id="bff-img" src="images/mine.png">
+            <img id="bff-img" src="mine.png">
             <h2 id="bday-age">28 years old</h2>
             <h4 id="bday-date">28.01.2025</h4>
         </div>
